<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_events_list">

    <!-- Nav bar fragments -->
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.sprite.screens.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_events_list"
        android:name="com.example.sprite.screens.eventsList.EventsListFragment"
        android:label="Events List"
        tools:layout="@layout/fragment_events_list"/>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.sprite.screens.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.sprite.screens.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_notifications"
        android:name="com.example.sprite.screens.Notifications.NotificationFragment"
        android:label="@string/menu_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.sprite.screens.userProfile.UserProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <!-- Other fragments -->
    <fragment
        android:id="@+id/fragment_event_details"
        android:name="com.example.sprite.screens.organizer.eventDetails.EventDetailsFragment"
        android:label="Event Details"
        tools:layout="@layout/fragment_event_details" />

    <fragment
        android:id="@+id/fragment_manage_event"
        android:name="com.example.sprite.screens.createEvent.ManageEventFragment"
        android:label="Manage Event"
        tools:layout="@layout/fragment_manage_event" />

    <fragment
        android:id="@+id/fragment_review_event"
        android:name="com.example.sprite.screens.admin.ReviewEventFragment"
        android:label="Review Event"
        tools:layout="@layout/fragment_review_event" />
    <fragment
        android:id="@+id/nav_create_event"
        android:name="com.example.sprite.screens.createEvent.CreateEventFragment"
        android:label="CreateEvent"
        tools:layout="@layout/fragment_create_event" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.sprite.screens.Profile.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/fragment_view_entrants"
        android:name="com.example.sprite.screens.viewEntrants.ViewEntrantsFragment"
        android:label="View Entrants"
        tools:layout="@layout/fragment_view_entrants" />


<!--this is how to add a fragment into the nav bar-->
<!--    <fragment-->
<!--        android:id="@+id/some_id"-->
<!--        android:name="com.example.sprite.screens.some_fragment"-->
<!--        android:label="some_fragment_label"-->
<!--        tools:layout="@layout/actual_screen" />-->


</navigation>